# bazel_example

./: .gitignore  WORKSPACE.bazel
projects/calculator/: BUILD.bazel  calculator.py  calculator_test.py
projects/my_python_app/: BUILD.bazel  main.py
projects/projectA/: BUILD.bazel
projects/projectB/: BUILD.bazel
